Cosmetic fixes for recorder select
Fixes horizontal scrolling issue, spinner placement, other possible
style problems

--- a/scheduler/static/scheduler/css/mobile.less
+++ b/scheduler/static/scheduler/css/mobile.less
@@ -191,6 +191,10 @@ span.loading {
 
 }//.tab-content
 
+#panopto-recorders {
+    .rooms-loading { position: absolute; display: inline-block; margin-left: 150px; font-size: 20px; height: 40px; width: 40x;  }
+    select#room-select { width: 16em; }
+}
 
 /*** Search result block ***/
 .result-display-container{ padding:0px;
